--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -1142,7 +1142,6 @@
     <addaction name="action_fetch"/>
     <addaction name="action_pull"/>
     <addaction name="action_push"/>
-    <addaction name="action_push_u"/>
     <addaction name="action_push_all_tags"/>
     <addaction name="separator"/>
     <addaction name="action_clone"/>
@@ -1377,6 +1376,12 @@
    <property name="text">
     <string>&amp;Push</string>
    </property>
+   <property name="toolTip">
+    <string>Push...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
    <property name="autoRepeat">
     <bool>false</bool>
    </property>
@@ -1495,14 +1500,6 @@
   <action name="action_delete_branch">
    <property name="text">
     <string>Delete branch...</string>
-   </property>
-  </action>
-  <action name="action_push_u">
-   <property name="text">
-    <string>Push upstream...</string>
-   </property>
-   <property name="toolTip">
-    <string>Push upstream</string>
    </property>
   </action>
   <action name="action_reset_HEAD_1">
