--- a/src/SettingProgramsForm.ui
+++ b/src/SettingProgramsForm.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Programs</string>
+   <string>Programs 1</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
