--- a/src/CommitPropertyDialog.ui
+++ b/src/CommitPropertyDialog.ui
@@ -18,7 +18,6 @@
     <widget class="ReadOnlyLineEdit" name="lineEdit_message">
      <property name="font">
       <font>
-       <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
@@ -73,21 +72,12 @@
       </layout>
      </item>
      <item>
-      <widget class="QLabel" name="label_user_avatar">
+      <widget class="SimpleImageWidget" name="widget_user_avatar" native="true">
        <property name="minimumSize">
         <size>
-         <width>64</width>
-         <height>0</height>
+         <width>80</width>
+         <height>80</height>
         </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>64</width>
-         <height>16777215</height>
-        </size>
-       </property>
-       <property name="text">
-        <string/>
        </property>
       </widget>
      </item>
@@ -203,15 +193,12 @@
          </layout>
         </item>
         <item>
-         <widget class="QLabel" name="label_sign_avatar">
+         <widget class="SimpleImageWidget" name="widget_sign_avatar" native="true">
           <property name="minimumSize">
            <size>
-            <width>64</width>
+            <width>80</width>
             <height>0</height>
            </size>
-          </property>
-          <property name="text">
-           <string/>
           </property>
          </widget>
         </item>
@@ -341,6 +328,12 @@
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>SimpleImageWidget</class>
+   <extends>QWidget</extends>
+   <header>SimpleImageWidget.h</header>
+   <container>1</container>
+  </customwidget>
   <customwidget>
    <class>ReadOnlyLineEdit</class>
    <extends>QLineEdit</extends>
