プロファイル編集機能

--- a/src/ConfigUserDialog.ui
+++ b/src/ConfigUserDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>589</width>
-    <height>302</height>
+    <width>705</width>
+    <height>306</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -77,11 +77,35 @@
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_2">
            <item>
-            <widget class="QCheckBox" name="checkBox_unset_local">
-             <property name="text">
-              <string>Unset (use global user)</string>
-             </property>
-            </widget>
+            <layout class="QHBoxLayout" name="horizontalLayout_4">
+             <item>
+              <widget class="QCheckBox" name="checkBox_unset_local">
+               <property name="text">
+                <string>Unset (use global user)</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_3">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="QPushButton" name="pushButton_profiles">
+               <property name="text">
+                <string>Profiles...</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </item>
            <item>
             <layout class="QFormLayout" name="formLayout_2">
@@ -150,19 +174,19 @@
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
            <item>
-            <widget class="QPushButton" name="pushButton_get_icon">
-             <property name="text">
-              <string>Get icon from network</string>
-             </property>
-            </widget>
-           </item>
-           <item>
             <widget class="SimpleImageWidget" name="widget_avatar" native="true">
              <property name="minimumSize">
               <size>
                <width>100</width>
                <height>0</height>
               </size>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="pushButton_get_icon">
+             <property name="text">
+              <string>Get icon from network</string>
              </property>
             </widget>
            </item>
