--- a/src/WelcomeWizardDialog.ui
+++ b/src/WelcomeWizardDialog.ui
@@ -29,7 +29,7 @@
    <item>
     <widget class="QStackedWidget" name="stackedWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>3</number>
      </property>
      <widget class="QWidget" name="page_helper_tools">
       <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -37,6 +37,7 @@
         <widget class="QLabel" name="label_5">
          <property name="font">
           <font>
+           <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
@@ -94,6 +95,7 @@
         <widget class="QLabel" name="label">
          <property name="font">
           <font>
+           <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
@@ -211,6 +213,7 @@
         <widget class="QLabel" name="label_4">
          <property name="font">
           <font>
+           <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
@@ -268,6 +271,7 @@
         <widget class="QLabel" name="label_8">
          <property name="font">
           <font>
+           <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
@@ -285,17 +289,10 @@
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="0" column="0">
-          <widget class="QLabel" name="label_9">
-           <property name="text">
-            <string>user</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="ReadOnlyLineEdit" name="lineEdit_preview_user">
-           <property name="readOnly">
-            <bool>true</bool>
+         <item row="4" column="0" colspan="2">
+          <widget class="Line" name="line_7">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
@@ -308,6 +305,34 @@
          </item>
          <item row="1" column="1">
           <widget class="ReadOnlyLineEdit" name="lineEdit_preview_email">
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_9">
+           <property name="text">
+            <string>user</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="0">
+          <widget class="QLabel" name="label_11">
+           <property name="text">
+            <string>git</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="1">
+          <widget class="ReadOnlyLineEdit" name="lineEdit_preview_git">
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="ReadOnlyLineEdit" name="lineEdit_preview_user">
            <property name="readOnly">
             <bool>true</bool>
            </property>
@@ -327,43 +352,8 @@
            </property>
           </widget>
          </item>
-         <item row="5" column="0">
-          <widget class="QLabel" name="label_11">
-           <property name="text">
-            <string>git</string>
-           </property>
-          </widget>
-         </item>
-         <item row="5" column="1">
-          <widget class="ReadOnlyLineEdit" name="lineEdit_preview_git">
-           <property name="readOnly">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="6" column="0">
-          <widget class="QLabel" name="label_12">
-           <property name="text">
-            <string>file</string>
-           </property>
-          </widget>
-         </item>
-         <item row="6" column="1">
-          <widget class="ReadOnlyLineEdit" name="lineEdit_preview_file">
-           <property name="readOnly">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
          <item row="2" column="0" colspan="2">
           <widget class="Line" name="line_5">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-          </widget>
-         </item>
-         <item row="4" column="0" colspan="2">
-          <widget class="Line" name="line_7">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
