--- a/src/CommitPropertyDialog.ui
+++ b/src/CommitPropertyDialog.ui
@@ -120,11 +120,11 @@
          </size>
         </property>
         <property name="title">
-         <string>GPG Sign</string>
+         <string>GPG Signature</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
-          <widget class="QTextEdit" name="textEdit_signature">
+          <widget class="QTextEdit" name="textEdit_sign_text">
            <property name="readOnly">
             <bool>true</bool>
            </property>
@@ -137,12 +137,12 @@
              <item row="0" column="0">
               <widget class="QLabel" name="label">
                <property name="text">
-                <string>ID</string>
+                <string>Status</string>
                </property>
               </widget>
              </item>
              <item row="0" column="1">
-              <widget class="ReadOnlyLineEdit" name="lineEdit_sign_id"/>
+              <widget class="ReadOnlyLineEdit" name="lineEdit_sign_status"/>
              </item>
              <item row="1" column="0">
               <widget class="QLabel" name="label_7">
