--- a/src/AddRepositoryDialog.ui
+++ b/src/AddRepositoryDialog.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QStackedWidget" name="stackedWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="page_first">
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -66,19 +66,40 @@
          </property>
          <layout class="QGridLayout" name="gridLayout_2">
           <item row="0" column="0">
+           <widget class="QLabel" name="label_2">
+            <property name="text">
+             <string>Folder</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QComboBox" name="comboBox_folder">
+            <property name="editable">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="QPushButton" name="pushButton_manage_favorite_dirs">
+            <property name="text">
+             <string>Manage...</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
            <widget class="QLabel" name="label">
             <property name="text">
              <string>Path</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="1">
+          <item row="1" column="1">
            <widget class="DirectoryLineEdit" name="lineEdit_local_path"/>
           </item>
-          <item row="0" column="2">
+          <item row="1" column="2">
            <widget class="QPushButton" name="pushButton_browse_local_path">
             <property name="text">
-             <string>Browse</string>
+             <string>Browse...</string>
             </property>
            </widget>
           </item>
@@ -282,6 +303,8 @@
   <tabstop>radioButton_clone</tabstop>
   <tabstop>radioButton_add_existing</tabstop>
   <tabstop>radioButton_initialize</tabstop>
+  <tabstop>comboBox_folder</tabstop>
+  <tabstop>pushButton_manage_favorite_dirs</tabstop>
   <tabstop>lineEdit_local_path</tabstop>
   <tabstop>pushButton_browse_local_path</tabstop>
   <tabstop>lineEdit_remote_name</tabstop>
